--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #171717;
-  --foreground: #ffffff;
+  --background: #000;
+  --foreground: #fff;
 }
 
 @theme inline {
@@ -15,4 +15,8 @@
 body {
   background: var(--background);
   color: var(--foreground);
+}
+
+h1, summary {
+  font-family: var(--font-mono);
 }
